--- a/index.html
+++ b/index.html
@@ -1,3 +1,41 @@
-<html>
-<p>Del Mar Robotics</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Del Mar Robotics Team</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            text-align: center;
+        }
+        .box {
+            width: 300px;
+            height: 150px;
+            background-color: #fdd835; /* yellow */
+            color: #1565c0; /* blue */
+            border-radius: 15px;
+            margin: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="box">Del Mar Robotics Team</div>
+        <div class="box">From Del Mar Middle School</div>
+    </div>
+</body>
 </html>
