--- a/index.html
+++ b/index.html
@@ -4,31 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Del Mar Robotics Team</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #cfe8fc; /* light blue */
+            background-color: #f3f3f3;
         }
         header {
             position: fixed;
             width: 100%;
             background-color: #ffffff;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
             z-index: 1000;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: top 0.3s;
         }
-        .squish {
-            max-width: 100%;
+        .logo {
+            width: 120px;
             height: auto;
-            transition: max-width 0.3s;
+            transition: all 0.3s;
+        }
+        .navbar {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 20px;
+        }
+        .navbar a {
+            text-decoration: none;
+            color: #333333;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+        .navbar a:hover {
+            color: #fdd835; /* yellow */
         }
         .container {
             text-align: center;
-            padding-top: 100px;
-            height: 2000px; /* Example height for demonstration */
+            padding-top: 150px;
         }
         .box {
             width: 300px;
@@ -36,21 +51,25 @@
             background-color: #fdd835; /* yellow */
             color: #1565c0; /* blue */
             border-radius: 15px;
-            margin: 10px;
+            margin: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 24px;
+            font-size: 28px;
             font-weight: bold;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s;
+        }
+        .box:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
 <body>
-    <header id="navbar">
-        <!-- Logo on the far left -->
-        <img class="squish" src="logo.png" alt="Del Mar Robotics Team" style="width: 150px;" />
-        <!-- Navigation bar -->
-        <nav>
+    <header>
+        <img class="logo" src="logo.png" alt="Del Mar Robotics Team" />
+        <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#about">About Us</a>
             <a href="#contact">Contact</a>
@@ -67,9 +86,9 @@
         window.onscroll = function() {
             let currentScrollPos = window.pageYOffset;
             if (prevScrollpos > currentScrollPos) {
-                document.querySelector("#navbar").style.top = "0";
+                document.querySelector("header").style.top = "0";
             } else {
-                document.querySelector("#navbar").style.top = "-100px";
+                document.querySelector("header").style.top = "-100px";
             }
             prevScrollpos = currentScrollPos;
         }
