--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         let prevScrollpos = window.pageYOffset;
         window.onscroll = function() {
             let currentScrollPos = window.pageYOffset;
-            if (prevScrollpos > currentScrollPos) {
+            if (prevScrollpos > currentScrollPos || currentScrollPos < 10) {
                 document.querySelector("header").style.top = "0";
             } else {
                 document.querySelector("header").style.top = "-100px";
