--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         .navbar a:hover {
             color: #fdd835; /* yellow */
         }
+        .banner {
+            width: 100%;
+            height: 300px;
+            background: url('banner.jpg') center/cover no-repeat;
+            transition: height 0.3s;
+        }
         .container {
             text-align: center;
             padding-top: 150px;
@@ -76,6 +82,7 @@
             <a href="#donate">Donate</a>
         </nav>
     </header>
+    <div class="banner"></div>
     <div class="container">
         <div class="box">Del Mar Robotics Team</div>
         <div class="box">From Del Mar Middle School</div>
@@ -85,8 +92,8 @@
         let prevScrollpos = window.pageYOffset;
         window.onscroll = function() {
             let currentScrollPos = window.pageYOffset;
-            let documentHeight = document.documentElement.scrollHeight - document.documentElement.clientHeight;
-            if (prevScrollpos > currentScrollPos || currentScrollPos < 10 || currentScrollPos >= documentHeight - window.innerHeight) {
+            let documentHeight = document.documentElement.scrollHeight - window.innerHeight;
+            if (prevScrollpos > currentScrollPos || currentScrollPos < 10 || currentScrollPos >= documentHeight) {
                 document.querySelector("header").style.top = "0";
             } else {
                 document.querySelector("header").style.top = "-100px";
@@ -94,6 +101,5 @@
             prevScrollpos = currentScrollPos;
         }
     </script>
-
 </body>
 </html>
