--- a/index.html
+++ b/index.html
@@ -90,13 +90,24 @@
 
     <script>
         let prevScrollpos = window.pageYOffset;
+        let isInitialScroll = true;
+
+        window.onload = function() {
+            prevScrollpos = window.pageYOffset;
+        }
+
         window.onscroll = function() {
             let currentScrollPos = window.pageYOffset;
             let documentHeight = document.documentElement.scrollHeight - window.innerHeight;
             if (prevScrollpos > currentScrollPos || currentScrollPos < 10 || currentScrollPos >= documentHeight) {
-                document.querySelector("header").style.top = "0";
+                if (!isInitialScroll || currentScrollPos < 10) {
+                    document.querySelector("header").style.top = "0";
+                }
             } else {
                 document.querySelector("header").style.top = "-100px";
+            }
+            if (isInitialScroll) {
+                isInitialScroll = false;
             }
             prevScrollpos = currentScrollPos;
         }
