--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
         window.onload = function() {
             prevScrollpos = window.pageYOffset;
+            document.querySelector("header").style.top = "0";
         }
 
         window.onscroll = function() {
