--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: #f3f3f3;
+            background-color: #add8e6; /* light blue */
         }
         header {
             position: fixed;
@@ -21,6 +22,7 @@
             z-index: 1000;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: top 0.3s;
+             background-color: #f2f2f2; /* light grey */
         }
         .logo {
             width: 120px;
