--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
             <a href="#about">About Us</a>
             <a href="#contact">Contact</a>
             <a href="#donate">Donate</a>
+            <a href="#watch">Watch</a>
+            <a href="#news">News</a>
         </nav>
     </header>
     <div class="banner"></div>
