--- a/index.html
+++ b/index.html
@@ -72,13 +72,16 @@
             transform: scale(1.05);
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
+        .active {
+            color: #FFD700; /* golden color */
+        }
     </style>
 </head>
 <body>
     <header>
         <img class="logo" src="logo.png" alt="Del Mar Robotics Team" />
         <nav class="navbar">
-            <a href="#home">Home</a>
+            <a href="#home" class="active">Home</a>
             <a href="#about">About Us</a>
             <a href="#contact">Contact</a>
             <a href="#donate">Donate</a>
