--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
         .active {
-            color: #FFD700; /* golden color */
+            color: #00008B; /* golden color */
         }
     </style>
 </head>
