--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             transform: scale(1.05);
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
-        .active {
+        .navbar a.active {
             color: #00008B; /* golden color */
         }
     </style>
