--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
         header {
             position: fixed;
             width: 100%;
-            background-color: #ffffff;
+            background-color: #f2f2f2; /* light grey */
             padding: 20px 0;
             text-align: center;
             z-index: 1000;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: top 0.3s;
-             background-color: #f2f2f2; /* light grey */
         }
         .logo {
             width: 120px;
@@ -44,10 +43,9 @@
             color: #fdd835; /* yellow */
         }
         .banner {
-            width: 100%;
-            height: 300px;
-            background: url('banner.jpg') center/cover no-repeat;
-            transition: height 0.3s;
+            /* your existing banner styles */
+            position: relative;
+            top: 80px; /* adjust the top position as needed */
         }
         .container {
             text-align: center;
