--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             z-index: 1000;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: top 0.3s;
+            height: 100px;
         }
         .logo {
             width: 120px;
