--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             z-index: 1000;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: top 1s;
-            height: 100%;
+            height: auto;
         }
         .logo {
             width: 120px;
