--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header id="header">
         <img class="logo" src="logo.png" alt="Del Mar Robotics Team" />
+    </header>
+    <header id="links">
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About Us</a>
