--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet>
 </head>
 <body>
-    <header id="header">
+    <header>
         <img class="logo" src="logo.png" alt="Del Mar Robotics Team" />
     </header>
     <header id="links">
