--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <h1>Bearded Dragons #21925</h1>
         <img class="logo" src="logo.png" alt="Del Mar Robotics Team" />
     </header>
     <header id="links">
