--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Bearded Dragons #21925</h1>
-        <img class="logo" src="logo.png" alt="Del Mar Robotics Team" />
+        <img class="logo" src="logo.svg" alt="Del Mar Robotics Team" />
     </header>
     <header id="links">
         <nav class="navbar">
