--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
+    <img class="logo" src="https://21925.robotnet.net/logo.svg" alt="Del Mar Robotics Team" />
         <h1>Bearded Dragons #21925</h1>
-        <img class="logo" src="logo.svg" alt="Del Mar Robotics Team" />
     </header>
     <header id="links">
         <nav class="navbar">
@@ -22,7 +22,7 @@
             <a href="#news">News</a>
         </nav>
     </header>
-    <div class="banner"></div>
+    <!--<div class="banner"></div>-->
     <div class="container">
         <div class="box">
         	<h1>Del Mar Robotics Team</h1>
