--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Del Mar Robotics Team</title>
+    <link rel="shortcut icon" type="image/x-icon" href="logo.svg">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-    <img class="logo" src="https://21925.robotnet.net/logo.svg" alt="Del Mar Robotics Team" />
+    <img class="logo" src="logo.svg" alt="Del Mar Robotics Team" />
         <h1>Bearded Dragons #21925</h1>
     </header>
     <header id="links">
