--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="#donate">Donate</a>
             <a href="#watch">Watch</a>
             <a href="#news">News</a>
+            <a href="#files">Files</a>
         </nav>
     </header>
     <!--<div class="banner"></div>-->
