--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-    <img class="logo" src="logo.svg" alt="Del Mar Robotics Team" />
+    <img class="logo" src="logo.png" alt="Del Mar Robotics Team" />
         <h1>Bearded Dragons #21925</h1>
     </header>
     <header id="links">
         <nav class="navbar">
-            <a href="#home" class="active">Home</a>
+            <a href="index.html" class="active">Home</a>
             <a href="#about">About Us</a>
             <a href="#contact">Contact</a>
             <a href="#donate">Donate</a>
