--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <header>
     <img class="logo" src="logo.png" alt="Del Mar Robotics Team" />
-        <!-- <h1>Bearded Dragons #21925</h1> -->
+        <h1>Bearded Dragons #21925</h1>
     </header>
     <header id="links">
         <nav class="navbar">
@@ -26,10 +26,8 @@
     <!--<div class="banner"></div>-->
     <div class="container">
         <div class="box">
-        	<h1>Del Mar Robotics Team</h1>
-            <p>Welcome to the Del Mar Robotics Team website! For any news, questions, or video footage from our matches, use the navigation bar at the top of the screen</p>
-        </div>
-        <div class="box">From Del Mar Middle School</div>
+        	<h1>About Us</h1>
+            <p>We are a team of about 20 students from Del Mar Middle School, and we have been active since the 2024-2024 Centerstage season</p>
     </div>
 </body>
 </html>
