--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <header id="links">
         <nav class="navbar">
-            <a href="index.html" class="active">Home</a>
-            <a href="#about">About Us</a>
+            <a href="" class="active">Home</a>
+            <a href="about.html">About Us</a>
             <a href="#contact">Contact</a>
             <a href="#donate">Donate</a>
             <a href="#watch">Watch</a>
