--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <header id="links">
         <nav class="navbar">
-            <a href="" class="active">Home</a>
+            <a href="/" class="active">Home</a>
             <a href="about.html">About Us</a>
             <a href="#contact">Contact</a>
             <a href="#donate">Donate</a>
