--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="container">
         <div class="box">
         	<h1>Del Mar Robotics Team</h1>
+            <div></div>
             <p>Welcome to the Del Mar Robotics Team website! For any news, questions, or video footage from our matches, use the navigation bar at the top of the screen</p>
         </div>
         <div class="box">From Del Mar Middle School</div>
