--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
     </header>
     <header id="links">
         <nav class="navbar">
-            <a href="index.html" class="active">Home</a>
-            <a href="#about">About Us</a>
+            <a href="/">Home</a>
+            <a href="#about"  class="active">About Us</a>
             <a href="#contact">Contact</a>
             <a href="#donate">Donate</a>
             <a href="#watch">Watch</a>
@@ -27,6 +27,7 @@
     <div class="container">
         <div class="box">
         	<h1>About Us</h1>
+            <hr>
             <p>We are a team of about 20 students from Del Mar Middle School, and we have been active since the 2023-2024 Centerstage season</p>
     </div>
 </body>
