--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
         <div class="box">
         	<h1>About Us</h1>
             <hr>
-            <p>We are a team of about 20 students from Del Mar Middle School, and we have been active since the 2023-2024 Centerstage season</p>
+            <p>Team 21925, also known as The Bearded Dragons, hails from Belvedere Tiburon, CA, USA. They are a rookie team in the FIRST Tech Challenge (FTC), having started competing in 2022. Since then, they have participated in a total of 5 official events since 2019. In the 2023 season, they received the Motivate Award and were the captains in the CA-NorCal San Jose #2 Qualifying Tournament and CA-NorCal San Jose #3 Qualifying Tournament playoffs, ultimately leading their allience to victory in the ladder! Additionally, they competed in the California NorCal Regional Championship - Silicon Valley.
+                
+                Their journey in the FTC showcases their dedication and passion for robotics.</p>
     </div>
 </body>
 </html>
