--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="box">
         	<h1>Del Mar Robotics Team</h1>
             <hr>
-            <p>Welcome to the Del Mar Robotics Team website! For any news, questions, or video footage from our matches, use the navigation bar at the top of the screen</p>
+            <p>Team 21925, also known as The Bearded Dragons, are from Belvedere Tiburon, CA, USA. They are a two year old team in the FIRST Tech Challenge (FTC), having started competing in 2022. Since then, they have participated in a total of 5 official events since 2019. In the 2023 season Centerstage, they received the Motivate Award and were the captains in the CA-NorCal San Jose #2 Qualifying Tournament and CA-NorCal San Jose #3 Qualifying Tournament playoffs, ultimately leading their allience to victory in the latter! Additionally, they competed in the California NorCal Regional Championship - Silicon Valley. Their journey in the FTC showcases their dedication and passion for robotics. \n\n Find out more in the About Us page</p>
         </div>
         <div class="box">From Del Mar Middle School</div>
     </div>
