--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
     <header id="links">
         <nav class="navbar">
             <a href="/">Home</a>
-            <a href="about.html" class="active">About Us</a>
-            <a href="contact.html">Contact</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html" class="active">Contact</a>
             <a href="donate.html">Donate</a>
             <a href="watch.html">Watch</a>
             <a href="news.html">News</a>
@@ -26,9 +26,9 @@
     <!--<div class="banner"></div>-->
     <div class="container">
         <div class="box">
-        	<h1>About Us</h1>
+        	<h1>Contact</h1>
             <hr>
-            <p></p>
+            <p>To contact the robotics team, email delmarrobotics@gmail.com, or click <a href="mailto: delmarrobotics@gmail.com">here</a></p>
     </div>
     <div class="box">&copy; Del Mar Robotics 2024</div>
 </body>
