--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <nav class="navbar">
             <a href="/" class="active">Home</a>
             <a href="about.html">About Us</a>
-            <a href="#contact">Contact</a>
-            <a href="#donate">Donate</a>
-            <a href="#watch">Watch</a>
-            <a href="#news">News</a>
-            <a href="#files">Files</a>
+            <a href="contact.html">Contact</a>
+            <a href="donate.html">Donate</a>
+            <a href="watch.html">Watch</a>
+            <a href="news.html">News</a>
+            <a href="files.html">Files</a>
         </nav>
     </header>
     <!--<div class="banner"></div>-->
