--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
         	<h1>Contact</h1>
             <hr>
             <p>To contact the robotics team, email delmarrobotics@gmail.com by clicking <a href="mailto: delmarrobotics@gmail.com">HERE</a>. If this does not work, you can contact us with the form below</p>
+        </div>
         <div class="box">
         	<h1>Form</h1>
             <hr>
@@ -50,6 +51,7 @@
                 
                 <input type="submit" value="Submit">
             </form>
+        </div>
         <div class="box">&copy; Del Mar Robotics 2024</div>
     </div>
 </body>
