--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         <div class="box">
         	<h1>Form</h1>
             <hr>
-            <form action="https://airform.io/delmarrobotics@gmail.com" method="post"></form>
+            <form action="https://airform.io/delmarrobotics@gmail.com" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 
