--- a/news.html
+++ b/news.html
@@ -29,7 +29,14 @@
         	<h1>News</h1>
             <hr>
             <p></p>
-    </div>
+        </div>
+        <div class="box">
+        	<h1>Bearded Dragons in the Ark!</h1>
+            <hr>
+            <p>
+                Students test engineering skills in Del Mar robotics class
+                https://www.thearknewspaper.com/live/students-test-engineering-skills-in-del-mar-robotics-class</p>
+        </div>
     <div class="box">&copy; Del Mar Robotics 2025</div>
 </body>
 </html>
